unpackaged/main/default/objects/Development_Library__c/Development_Library__c.object-meta.xml
<CustomObject>
    <description>This custom object will hold report and proposal documentation related to Deliverables</description>
    <label>Development Library Record</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Development Library Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Library Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>