unpackaged/main/default/objects/Development_Library__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Donor to receive the report/proposal</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Development Library Records</relationshipLabel>
    <relationshipName>Development_Library_Records</relationshipName>
    <type>Lookup</type>
</CustomField>