unpackaged/main/default/objects/Development_Library__c/fields/Cuba__c.field-meta.xml
<CustomField>
    <fullName>Cuba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuba</label>
    <type>Checkbox</type>
</CustomField>