unpackaged/main/default/objects/Development_Library__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deliverable</label>
    <referenceTo>npsp__Grant_Deadline__c</referenceTo>
    <relationshipName>Development_Libraries</relationshipName>
    <type>Lookup</type>
</CustomField>