unpackaged/main/default/objects/Development_Library__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Additional key words related to the document</inlineHelpText>
    <label>Key Words</label>
    <type>TextArea</type>
</CustomField>