unpackaged/main/default/objects/Development_Library__c/fields/Library_Name__c.field-meta.xml
<CustomField>
    <fullName>Library_Name__c</fullName>
    <label>Document Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concept Papers</fullName>
            </value>
            <value>
                <fullName>Financial Reports</fullName>
            </value>
            <value>
                <fullName>Funder Attachments</fullName>
            </value>
            <value>
                <fullName>Funding Menus</fullName>
            </value>
            <value>
                <fullName>General Resources</fullName>
            </value>
            <value>
                <fullName>Letters of Inquiry</fullName>
            </value>
            <value>
                <fullName>Presentations</fullName>
            </value>
            <value>
                <fullName>Proposal Budgets</fullName>
            </value>
            <value>
                <fullName>Proposals</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>PG Time Capsule</fullName>
                <isActive>false</isActive>
                <label>PG Time Capsule</label>
            </value>
            <value>
                <fullName>Planned Giving</fullName>
                <isActive>false</isActive>
                <label>Planned Giving</label>
            </value>
            <value>
                <fullName>Salesforce Instructional</fullName>
                <isActive>false</isActive>
                <label>Salesforce Instructional</label>
            </value>
            <value>
                <fullName>Talking Points</fullName>
                <isActive>false</isActive>
                <label>Talking Points</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>