unpackaged/main/default/objects/Development_Library__c/fields/Program_Tags__c.field-meta.xml
<CustomField>
    <fullName>Program_Tags__c</fullName>
    <label>Programmatic Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Aquaculture</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>Carbon Markets</fullName>
            </value>
            <value>
                <fullName>Clean Air</fullName>
            </value>
            <value>
                <fullName>Clean Energy</fullName>
            </value>
            <value>
                <fullName>Climate</fullName>
            </value>
            <value>
                <fullName>Climate Corps</fullName>
            </value>
            <value>
                <fullName>Coastal</fullName>
            </value>
            <value>
                <fullName>Community Engagement</fullName>
            </value>
            <value>
                <fullName>Defend Our Future</fullName>
            </value>
            <value>
                <fullName>DEI</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Ecosystems</fullName>
            </value>
            <value>
                <fullName>EDFBIZ</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environmental Justice</fullName>
            </value>
            <value>
                <fullName>Fisheries</fullName>
            </value>
            <value>
                <fullName>Food Systems</fullName>
            </value>
            <value>
                <fullName>General Support</fullName>
            </value>
            <value>
                <fullName>Global Strategy</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>MarComm</fullName>
            </value>
            <value>
                <fullName>Methane</fullName>
            </value>
            <value>
                <fullName>MethaneSAT</fullName>
            </value>
            <value>
                <fullName>MethaneSAT Advocacy</fullName>
            </value>
            <value>
                <fullName>Mom's Clean Air Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>