unpackaged/main/default/objects/Development_Library__c/fields/Program_Tags_Searchable_Text__c.field-meta.xml
<CustomField>
    <fullName>Program_Tags_Searchable_Text__c</fullName>
    <label>Program Tags Searchable Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>