unpackaged/main/default/objects/Development_Library__c/fields/Tags_Searchable_Text__c.field-meta.xml
<CustomField>
    <fullName>Tags_Searchable_Text__c</fullName>
    <label>Regional Tags Searchable Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>