unpackaged/main/default/objects/Development_Library__c/fields/Writer__c.field-meta.xml
<CustomField>
    <fullName>Writer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Development_Libraries</relationshipName>
    <type>Lookup</type>
</CustomField>