unpackaged/main/default/objects/Development_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Library_Name__c</columns>
    <columns>Tags__c</columns>
    <columns>Program_Tags__c</columns>
    <columns>Description__c</columns>
    <columns>Writer_Assigned__c</columns>
    <columns>Deliverable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>