unpackaged/main/default/objects/Development_Library__c/listViews/Funder_Attachments.listView-meta.xml
<ListView>
    <fullName>Funder_Attachments</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Library_Name__c</columns>
    <columns>Tags__c</columns>
    <columns>Program_Tags__c</columns>
    <columns>Description__c</columns>
    <columns>Writer_Assigned__c</columns>
    <columns>Deliverable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Library_Name__c</field>
        <operation>equals</operation>
        <value>Funder Attachments</value>
    </filters>
    <label>Funder Attachments</label>
</ListView>