unpackaged/main/default/objects/Development_Library__c/listViews/Funding_Menu.listView-meta.xml
<ListView>
    <fullName>Funding_Menu</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Library_Name__c</columns>
    <columns>Tags__c</columns>
    <columns>Program_Tags__c</columns>
    <columns>Description__c</columns>
    <columns>Writer_Assigned__c</columns>
    <columns>Deliverable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Library_Name__c</field>
        <operation>includes</operation>
        <value>Funding Menus</value>
    </filters>
    <label>Funding Menu</label>
</ListView>