unpackaged/main/default/objects/Development_Library__c/listViews/PG_Time_Capsule.listView-meta.xml
<ListView>
    <fullName>PG_Time_Capsule</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Library_Name__c</field>
        <operation>equals</operation>
        <value>PG Time Capsule</value>
    </filters>
    <label>PG Time Capsule</label>
</ListView>