unpackaged/main/default/objects/Development_Library__c/listViews/Planned_Giving.listView-meta.xml
<ListView>
    <fullName>Planned_Giving</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Planned Giving</label>
</ListView>