unpackaged/main/default/objects/Development_Library__c/listViews/Presentations.listView-meta.xml
<ListView>
    <fullName>Presentations</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Presentations</label>
</ListView>